crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__vines_of_vastwood_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "GenericEffect",
        "static_abilities": [
          {
            "mode": "CantBeTargeted",
            "affected": {
              "type": "ParentTarget"
            },
            "modifications": [],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "can't be the target of spells or abilities your opponents control"
          }
        ],
        "duration": "UntilEndOfTurn",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": []
        }
      },
      "cost": null,
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "PumpAll",
          "power": {
            "type": "Fixed",
            "value": 4
          },
          "toughness": {
            "type": "Fixed",
            "value": 4
          },
          "target": {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": null,
            "properties": []
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": "UntilEndOfTurn",
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": {
          "type": "AdditionalCostPaid"
        },
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": "UntilEndOfTurn",
      "description": "Target creature can't be the target of spells or abilities your opponents control this turn. If this spell was kicked, that creature gets +4/+4 until end of turn.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [
    {
      "Kicker": {
        "type": "Cost",
        "shards": [
          "Green"
        ],
        "generic": 0
      }
    }
  ],
  "additionalCost": {
    "type": "Kicker",
    "data": {
      "costs": [
        {
          "type": "Mana",
          "cost": {
            "type": "Cost",
            "shards": [
              "Green"
            ],
            "generic": 0
          }
        }
      ]
    }
  }
}
